--- a/css/styles.css
+++ b/css/styles.css
@@ -11302,8 +11302,26 @@ textarea.form-control-lg {
 	width: 100%;
 }
 
+.section-1 .campaign-slogan {
+	text-align: center;
+	display: none;
+}
+
+.section-1 .campaign-slogan p:nth-child(1) {
+	color: #fff;
+	font-size: 55px;
+	text-transform: uppercase;
+    margin-top: 175px;
+}
+
+.section-1 .campaign-slogan p:nth-child(2) {
+	color: #fff;
+	font-size: 27px;
+    margin-top: -25px;
+}
+
 .section-2 {
-	padding: 60px 60px;
+	padding: 20px 60px;
 	background-color: #ce3434;
 	color: #fff;
 	text-align: center;
