--- a/css/styles.css
+++ b/css/styles.css
@@ -11361,6 +11361,10 @@ textarea.form-control-lg {
 	margin-top: 30px;
 }
 
+.section-3 .responsive .tenure {
+	width: 239px;
+}
+
 .section-4 {
 	padding: 60px 60px;
 	text-align: center;
