--- a/css/styles.css
+++ b/css/styles.css
@@ -11287,7 +11287,11 @@ textarea.form-control-lg {
   }
 }
 
-/************************************* Custom CSS **********************************/
+/************************************* Custom CSS - Home **********************************/
+
+body {
+	overflow-x: hidden !important; /* Hide horizontal scrollbar */
+}
 
 .navbar .container img {
 	width: 13%;
@@ -11303,7 +11307,7 @@ textarea.form-control-lg {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: linear-gradient(to bottom, rgb(0 0 0 / 28%), rgb(255 255 255)), url(../assets/54521733_2329144977364847_9103956406834298880_n.jpg);
+    background-image: linear-gradient(to bottom, rgb(0 0 0 / 68%), rgb(0 0 0 / 94%)), url(../assets/54521733_2329144977364847_9103956406834298880_n.jpg);
     padding-top: 30px;
 	background-position: center bottom;
 }
@@ -11321,8 +11325,7 @@ textarea.form-control-lg {
 
 
 .section-1 .campaign-slogan p:nth-child(1) {
-	color: black;
-    font-size: 75px;
+	color: #fff;
     text-transform: uppercase;
     margin-top: 80px;
 }
@@ -11333,9 +11336,12 @@ textarea.form-control-lg {
     margin-top: -30px;
 }
 
+.section-1 .campaign-slogan p {
+	font-size: 57px;
+}
+
 .section-1 .campaign-slogan p:nth-child(3) {
-    color: black;
-    font-size: 65px;
+    color: #fff;
     text-transform: uppercase;
     margin-top: -35px;
 }
@@ -11518,17 +11524,82 @@ textarea.form-control-lg {
 }
 
 
-@media (max-width: 768px) {
-	.section-1 .campaign-slogan p:nth-child(1) {
-		font-size: 50px;
-	}
-}
 
+@media (max-width: 1182px) {
+
+}
 
 @media (max-width: 1024px) {
 	.section-1 .campaign-slogan p:nth-child(1) {
 		margin-top: 0px;
 	}
+
+	.section-1 .campaign-slogan p {
+		font-size: 50px !important;
+	}
+
+	.campaign-slogan {
+		margin-top: 60px;
+	}
 }
+
+@media (max-width: 942px) {
+	.section-1 .campaign-slogan p {
+		font-size: 45px !important;
+	}
+}
+
+@media (max-width: 862px) {
+	.section-1 .campaign-slogan p {
+		font-size: 38px !important;
+	}
+}
+
+@media (max-width: 769px) {
+	.campaign-slogan {
+		margin-top: 60px;
+	}
+}
+
+@media (max-width: 768px) {
+	.campaign-slogan {
+		margin-top: 15px;
+	}
+
+	.sonny-info-img-div {
+		margin-top: 45px;
+	}
+}
+
+@media (max-width: 425px) {
+	.section-1 .campaign-slogan p {
+		font-size: 28px !important;
+	}
+}
+
+@media (max-width: 344px) {
+	.section-1 .campaign-slogan p {
+		font-size: 24px !important;
+	}
+	.section-1 .campaign-slogan p:nth-child(3) {
+		color: black;
+		text-transform: uppercase;
+		margin-top: -27px;
+	}
+}
+
+/************************************* Custom CSS - About **********************************/
+
+
+.image-intro-profile {
+	padding: 60px 60px;
+}
+
+.image-intro-profile img {
+	width: 60%;
+	margin: 0 auto;
+}
+
+
 
 
