--- a/css/styles.css
+++ b/css/styles.css
@@ -11323,6 +11323,9 @@ body {
 	display: none;
 }
 
+.atty-matula-senado {
+	font-size: 46px;
+}	
 
 .section-1 .campaign-slogan p:nth-child(1) {
 	color: #fff;
